fixed issue where some elements across the application would be too big or rendered incorrectly

--- a/web-client/src/styles/pages/home.sass
+++ b/web-client/src/styles/pages/home.sass
@@ -9,9 +9,10 @@
 .page__home
 	background-image: url('/img/nature-wallpapers-phone-For-Desktop-Wallpaper.jpg')
 	background-size: cover
+	min-height: 94vh
 
 	span
-		font-size: 14px;
+		font-size: 14px
 
 	p
 		text-align: justify
@@ -26,18 +27,6 @@
 		display: block
 		margin: $base-unit auto
 		max-width: 60 * $base-spacing // 960
-	
-
-html, body
-	height: 100%
-	width: 100%
-	margin: 0
-	
-div
-	height: 100%
-
-main#content
-	height: 100%	
 
 .card
 	background: rgba(255, 255, 255, 0.9)
